@@ -1,5 +1,9 @@
 description = "Apereo CAS Native GraalVM Web Application"
 
+apply plugin: "java"
+apply plugin: "org.springframework.boot"
+apply plugin: "org.graalvm.buildtools.native"
+
 ext {
     publishMetadata = true
     projectMetadata = [
@@ -10,30 +14,31 @@ ext {
     ]
 }
 
-configurations.configureEach {
-    /*
-        Log4j does not support GraalVM and leads to com.oracle.svm.core.jdk.UnsupportedFeatureError:
-        Defining hidden classes at runtime is not supported.
-        We use logback instead.
-     */
-    exclude(group: "org.apache.logging.log4j", module: "log4j-api")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-jakarta-web")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-web")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-jcl")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j-impl")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j2-impl")
-    exclude(group: "org.apereo.cas", module: "cas-server-core-logging")
-
-    /*
-        DevTools and Spring Cloud Bootstrap do not support native images.
-     */
-    exclude(group: "org.springframework.boot", module: "spring-boot-devtools")
-    exclude(group: "org.springframework.cloud", module: "spring-cloud-starter-bootstrap")
+configurations {
+    configureEach {
+        exclude(group: "org.apache.groovy", module: "groovy-templates")
+        /*
+            Log4j does not support GraalVM and leads to com.oracle.svm.core.jdk.UnsupportedFeatureError:
+            Defining hidden classes at runtime is not supported. We use logback instead.
+         */
+        exclude(group: "org.apache.logging.log4j", module: "log4j-api")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-jakarta-web")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-web")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-jcl")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j-impl")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j2-impl")
+        exclude(group: "org.apereo.cas", module: "cas-server-core-logging")
+        /*
+            DevTools and Spring Cloud Bootstrap do not support native images.
+         */
+        exclude(group: "org.springframework.boot", module: "spring-boot-devtools")
+        exclude(group: "org.springframework.cloud", module: "spring-cloud-starter-bootstrap")
+    }
 }
 
 dependencies {
     compileOnly libraries.graalvmsdk
-    
+
     implementation project(":webapp:cas-server-webapp-init")
     implementation project(":webapp:cas-server-webapp-resources")
     implementation project(":webapp:cas-server-webapp-init-tomcat")
@@ -54,6 +59,7 @@ dependencies {
     implementation project(":core:cas-server-core-validation")
     implementation project(":core:cas-server-core-web")
     implementation project(":core:cas-server-core-webflow-api")
+    implementation project(":core:cas-server-core-webflow")
     implementation project(":core:cas-server-core-notifications")
 
     implementation project(":support:cas-server-support-native")
@@ -85,4 +91,91 @@ dependencies {
     }
     
     testImplementation libraries.graalvmsdk
+}
+
+graalvmNative {
+    metadataRepository {
+        enabled = true
+        version = "${graalVmMetadataRepositoryVersion}"
+    }
+
+    /*
+        The toolchain detection cannot distinguish between
+        GraalVM JDKs and standard JDKs without Native Image support.
+     */
+    toolchainDetection = false
+
+    binaries {
+        main {
+            imageName = "cas"
+            quickBuild = false
+            debug = true
+            verbose = false
+            richOutput = true
+            sharedLibrary = false
+            
+            configurationFileDirectories.from(file('src/graal'))
+
+            buildArgs.add('--allow-incomplete-classpath')
+            buildArgs.add('-H:+ReportExceptionStackTraces')
+            buildArgs.add('-H:+InlineBeforeAnalysis')
+            buildArgs.add('-H:+TraceSecurityServices')
+
+            buildArgs.add('--initialize-at-build-time=org.hibernate.internal.util.ReflectHelper')
+
+            buildArgs.add('--initialize-at-build-time=java.beans.Introspector')
+            buildArgs.add('--initialize-at-build-time=com.sun.beans')
+
+            buildArgs.add('--initialize-at-build-time=groovyjarjarantlr4.v4.runtime')
+            buildArgs.add('--initialize-at-build-time=org.codehaus.groovy')
+            buildArgs.add('--initialize-at-build-time=org.apache.groovy')
+            buildArgs.add('--initialize-at-build-time=groovy.lang')
+
+            buildArgs.add('--initialize-at-run-time=com.sun.xml.ws,org.codehaus.groovy.control.XStreamUtils,org.codehaus.groovy.vmplugin.v8.Java8\$LookupHolder,groovy.grape.GrapeIvy')
+            buildArgs.add("--initialize-at-run-time=org.bouncycastle.jcajce.provider.drbg.DRBG\$Default,org.bouncycastle.jcajce.provider.drbg.DRBG\$NonceAndIV")
+
+            buildArgs.add('--features=org.apereo.cas.nativex.features.BouncyCastleProviderFeature')
+
+            buildArgs.add('--enable-url-protocols=jar')
+
+            buildArgs.add("-g")
+            buildArgs.add("-O0")
+
+        }
+    }
+}
+
+processAot {
+    def list = []
+    list.add("--add-opens")
+    list.add("java.base/java.lang=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.util=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.time=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.net=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/sun.security.action=jdk.crypto.ec")
+    list.add("--add-opens")
+    list.add("java.base/java.nio=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/sun.nio.ch=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.management/sun.management=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("jdk.management/com.sun.management.internal=ALL-UNNAMED")
+    list.add("-Xdebug")
+    list.add("-Xrunjdwp:transport=dt_socket,address=*:5005,server=y,suspend=n")
+
+    jvmArgs = list
+
+    args(
+        "--spring.profiles.active=native",
+        "--spring.main.lazy-initialization=false",
+        "--logging.level.org.apereo.cas=info",
+        "--logging.level.org.springframework.core.env=info",
+        "--logging.level.org.springframework.boot=info",
+        "--logging.level.org.springframework.security=warn"
+    )
 }
